[tool.poetry]
name = "django-aloe-bdd"
version = "0.1.0"
description = "poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_aloe_bdd"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
