[tool.poetry]
name = "django-aloe-bdd"
version = "0.1.0"
description = "poetry"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_aloe_bdd"}]

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = "^1.7.4"
pytest = "^7.2.0"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
